# tascam-mixer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.adoc  README.md  clippy.toml  deny.toml  flake.nix  run-all-checks.sh
.claude/commands/: capture-tasks.md  code-review.md  commit.md  doc-review.md  docs-current.md  new-doc.md  next.md  refactor-scan.md  release.md  security-review.md  task.md  threat-model.md
.claude/skills/architecture-decision-record/: SKILL.md
.claude/skills/architecture-spec/: SKILL.md
.claude/skills/asciidoc-conventions/: SKILL.md
.claude/skills/c23-coding-rules/: SKILL.md
.claude/skills/c23-coding-rules/references/: c23-rules.adoc
.claude/skills/code-comments/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/design-spec/: SKILL.md
.claude/skills/dev-container/: SKILL.md
.claude/skills/device-editor-gui/: SKILL.md
.claude/skills/doc-code-sync/: SKILL.md
.claude/skills/doc-content-class/: SKILL.md
.claude/skills/docs-librarian/: SKILL.md
.claude/skills/docs-librarian/scripts/: docs-librarian
.claude/skills/git-commit/: SKILL.md
.claude/skills/identifier-conventions/: SKILL.md
.claude/skills/interface-spec/: SKILL.md
.claude/skills/prose-precision/: SKILL.md
.claude/skills/python-coding-rules/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/release-notes/: SKILL.md
.claude/skills/release/scripts/: bump-version
.claude/skills/requirement-spec/: SKILL.md
.claude/skills/rust-coding-rules/: SKILL.md
.claude/skills/rust-coding-rules/references/: clippy.toml  deny.toml  workspace-lints.toml
.claude/skills/security-review/: SKILL.md
.claude/skills/shell-coding-rules/: SKILL.md
.claude/skills/software-design-rules/: SKILL.md
.claude/skills/spec-document-template/: SKILL.md
.claude/skills/spec-review-checklist/: SKILL.md
.claude/skills/spec-writing-style/: SKILL.md
.claude/skills/task-capture/: SKILL.md
.claude/skills/task-from-sources/: SKILL.md
.claude/skills/task-prioritization/: SKILL.md
.claude/skills/task-tracker/: SKILL.md
.claude/skills/task-tracker/scripts/: tasklist
.claude/skills/test-writing-rules/: SKILL.md
.claude/skills/threat-model/: SKILL.md
.claude/skills/user-manual/: SKILL.md
.claude/skills/user-manual/references/: formats.md  sourcing.md  structure.md  writing.md
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/eleven/: Cargo.toml
crates/eleven-cli/: Cargo.toml
crates/eleven-cli/src/: commands.rs  main.rs
crates/eleven-gui/: Cargo.toml
crates/eleven-gui/src/: app.rs  config.rs  device.rs  loader.rs  main.rs  writer.rs
crates/eleven-lib/src/: lib.rs  manage.rs
crates/eleven-model/src/: backup.rs  error.rs  lib.rs  param.rs  tfx.rs
crates/eleven/src/: bank.rs  device.rs  lib.rs  sysex.rs
crates/eleven/src/backend/: mod.rs  rawmidi.rs
crates/gx700/: Cargo.toml
crates/gx700-cli/: Cargo.toml
crates/gx700-cli/src/: commands.rs  config.rs  main.rs
crates/gx700-gui/: Cargo.toml
crates/gx700-gui/src/: app.rs  config.rs  device.rs  loader.rs  main.rs  prober.rs
crates/gx700-lib/: Cargo.toml
crates/gx700-lib/src/: format.rs  lib.rs  library.rs  manage.rs
crates/gx700-model/: Cargo.toml
crates/gx700-model/src/: error.rs  lib.rs  param.rs  patch.rs  scene.rs  typed.rs  units.rs
crates/gx700-model/tests/: catalog_bank.rs
crates/gx700-model/tests/fixtures/bank/: U002.json  U004.json  U005.json  U006.json  U007.json  U009.json  U011.json  U012.json  U013.json  U014.json  U016.json  U017.json  U021.json  U023.json  U024.json  U025.json  U026.json  U027.json  U029.json  U031.json  U032.json  U034.json  U036.json  U037.json  U040.json  U046.json  U047.json  U048.json  U050.json  U051.json  U052.json  U054.json  U055.json  U056.json  U057.json  U058.json  U061.json  U062.json  U063.json  U064.json  (+19 more)
crates/gx700/src/: device.rs  error.rs  lib.rs  monitor.rs  param.rs  patch.rs  patch_io.rs  sysex.rs  units.rs
crates/gx700/src/backend/: lock.rs  mock.rs  mod.rs  rawmidi.rs
crates/gx700/tests/: catalog_bank.rs
crates/gx700/tests/fixtures/bank/: README.md  U001.json  U003.json  U008.json  U010.json  U015.json  U018.json  U019.json  U020.json  U022.json  U028.json  U030.json  U033.json  U035.json  U038.json  U039.json  U042.json  U043.json  U044.json  U045.json  U049.json  U053.json  U059.json  U060.json  U065.json  U069.json  U070.json  U071.json  U072.json  U074.json  U075.json  U076.json  U077.json  U079.json  U080.json  U090.json  U091.json  U092.json  U097.json  U098.json  (+1 more)
crates/midi/: Cargo.toml
crates/midi/src/: lib.rs  lock.rs  port.rs
crates/sysex/: Cargo.toml
crates/sysex/src/: lib.rs
crates/tascam-cli/src/: commands.rs  main.rs  value.rs
crates/tascam-cli/tests/: cli.rs
crates/tascam-gui/src/: app.rs  bridge.rs  channel.rs  config.rs  curves.rs  main.rs  output.rs  poller.rs  preset_tab.rs  scenes.rs
crates/tascam-us16x08/src/: control.rs  device.rs  event.rs  lib.rs  preset.rs  units.rs
crates/tascam-us16x08/src/backend/: alsa.rs  mod.rs
crates/tascam-us16x08/tests/: device.rs
crates/ui-common/: Cargo.toml
crates/ui-common/src/: comp.rs  icon.rs  lib.rs
crates/us16x08-gui/: Cargo.toml
crates/us16x08-gui/src/: app.rs  bridge.rs  channel.rs  curves.rs  main.rs  output.rs  poller.rs  preset_tab.rs
crates/us16x08/src/: event.rs  preset.rs
crates/us16x08/src/backend/: alsa.rs
docker/: enter-dev-container.sh
docker/mixer-build/: Dockerfile
docker/mixer-dev/: Dockerfile  bash_rc  dot_gitconfig  starship.toml
docs/: architecture.adoc  build.sh  eleven-rack-roadmap.adoc  eleven-rack-sysex-protocol.adoc  gx700-gui-roadmap.adoc  gx700-patch-data-format.adoc  gx700-sysex-protocol.adoc  gx700-user-manual.adoc  midi-arbitration.adoc  signal-chain.adoc  user-manual.adoc
docs/external-specs/: README.adoc
legacy/: aclocal.m4  config.h.in
legacy/src/: OMaster.h
packaging/: README.adoc  rackctl-eleven-gui.desktop  rackctl-gx700-gui.desktop  rackctl-us16x08-gui.desktop
