[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.7.3"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/malo-rte/rackctl"
authors = ["Mats Loman <mats.loman@rte.se>"]

[workspace.dependencies]
rackctl-core = { path = "crates/core" }
rackctl-midi = { path = "crates/midi" }
rackctl-gx700 = { path = "crates/gx700", default-features = false }
thiserror = "2"
alsa = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
eframe = "0.29"
egui = "0.29"
egui_plot = "0.29"
directories = "5"

# rust-coding-rules RS-3/RS-4/RS-10/RS-12/RS-30/RS-52/RS-90 — drop-in lint table.
# Each member crate opts in with `[lints]\nworkspace = true`.
[workspace.lints.rust]
unsafe_code                = "forbid"
unsafe_op_in_unsafe_fn     = "deny"
missing_docs               = "warn"
unused_must_use            = "deny"
rust_2018_idioms           = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all                        = { level = "deny", priority = -1 }
pedantic                   = { level = "warn", priority = -1 }

unwrap_used                = "deny"
expect_used                = "deny"
panic                      = "deny"
indexing_slicing           = "warn"

undocumented_unsafe_blocks = "deny"
missing_safety_doc         = "deny"
transmute_ptr_to_ptr       = "warn"

await_holding_lock         = "deny"

must_use_candidate         = "warn"
return_self_not_must_use   = "warn"

module_name_repetitions    = "allow"
missing_errors_doc         = "allow"
missing_panics_doc         = "allow"
must_use_unit              = "allow"
