[package]
name = "rackctl-core"
version.workspace = true
description = "Device-neutral on-disk library for the Rackctl suite: the self-identifying file-format envelope and the per-device config path conventions."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false             # internal support crate (path dependency), not for crates.io

[dependencies]
serde = { workspace = true }
serde_json.workspace = true
directories.workspace = true

[lints]
workspace = true
