[package]
name = "rackctl-eleven-cli"
version.workspace = true
description = "Command-line control tool (rackctl-eleven) for the Avid/Digidesign Eleven Rack guitar amp/effects processor."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false             # application crate, not for crates.io (it has a path dependency)

[[bin]]
name = "rackctl-eleven"
path = "src/main.rs"

[features]
# Mirror the library: the real ALSA rawmidi transport is on by default; build
# with `--no-default-features` for a mock-only binary that needs no MIDI port.
default = ["alsa"]
alsa = ["rackctl-eleven/alsa"]

[dependencies]
rackctl-eleven = { workspace = true }
rackctl-eleven-lib = { workspace = true }
clap.workspace = true
clap_complete.workspace = true
anyhow.workspace = true

[lints]
workspace = true
