[package]
name = "rackctl-ui"
version.workspace = true
description = "Shared egui UI helpers for the Rackctl GUIs (semantic action-button colours)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false             # internal support crate (path dependency), not for crates.io

[dependencies]
egui.workspace = true

[lints]
workspace = true
