[package]
name = "rackctl-us16x08-gui"
version.workspace = true
description = "Graphical mixer (rackctl-us16x08-gui) for the Tascam US-16x08 USB audio interface."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false             # application crate, not for crates.io (it has a path dependency)

[[bin]]
name = "rackctl-us16x08-gui"
path = "src/main.rs"

[features]
# The real ALSA backend is on by default; `--mock` swaps in the in-memory
# backend at runtime. Build with `--no-default-features` for a mock-only binary.
default = ["alsa"]
alsa = ["rackctl-us16x08/alsa"]

[dependencies]
rackctl-us16x08 = { path = "../us16x08", default-features = false }
rackctl-ui = { path = "../ui-common" }
clap.workspace = true
eframe.workspace = true
egui.workspace = true
egui_plot.workspace = true
directories.workspace = true
serde = { workspace = true }
serde_json.workspace = true
anyhow.workspace = true

[lints]
workspace = true
